--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="the_back_button">The Back button. Returns you to the previous page</string>
-    <string name="select_date">select date</string>
+    <string name="select_date">Select date</string>
     <string name="select_workout_exercise_prompt">Workout or Exercise</string>
-    <string name="select_date_range">select date range</string>
+    <string name="select_date_range">Select date range</string>
 </resources>
