--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,15 @@
     <string name="select_date">Select date</string>
     <string name="select_workout_exercise_prompt">Workout or Exercise</string>
     <string name="select_date_range">Select date range</string>
+    <string name="add_progress_picture">Custom Picture for adding an Exercise</string>
+
+    <string-array name="choose_category">
+        <item>Chest</item>
+        <item>Legs</item>
+        <item>Arm</item>
+        <item>Back</item>
+        <item>Cardio</item>
+    </string-array>
+
+
 </resources>
